--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,96 @@
-/**
- * TODO(you): Add the CSS necessary to complete your final project.
- **/
+@import url('https://fonts.googleapis.com/css?family=Merriweather&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Merriweather&display=swap');
+body{
+    font-family: 'Open Sans', sans-serif;
+    background-color: #fdf5f5; 
+    margin:0;
+}
+section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top:50px;
+}
+.title{
+    font-size: 30pt;
+    font-family: 'Merriweather',serif;
+    margin-bottom:50px;
+}
+.subtitle{
+    font-size:12pt;
+    font-family: 'Montserrat',serif;
+    margin-bottom:50px;
+}
+#create{
+    font-size:12pt;
+    font-family: 'Montserrat',serif;
+    border:2px solid black;
+    padding-top:20px;
+    padding-bottom:20px;
+    padding-left:50px;
+    padding-right:50px;
+    transition-duration: 0.25s;
+    transition-property: color;
+    transition-property: background-color;
+}
+#create:hover{ 
+    color:white;
+    background-color:black;
+}
+
+.inactive{
+    display: none;
+}
+#date{
+    border-bottom:5px solid gray;
+    padding-bottom:10px;
+    padding-left:20px;
+    padding-right:20px;
+    margin-bottom:20px;
+}
+textarea{
+    width:70%;
+    height:500px;
+    border:none;
+    font-size:14pt;
+    font-family:'Merriweather',serif;
+    background:transparent;
+}
+.bar{
+    display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	background-color: white;
+	height: 70px;
+	width: 100%;
+	bottom: 0px;
+}
+.icon{
+    background-size:100%;
+    height:50px;
+    width:50px;
+    border:none;
+}
+#home{
+    font-size:18pt;
+    font-family: 'Montserrat',serif;
+    border:none;
+}
+#previous{
+    background: url("../image/back.png") no-repeat;
+    margin-right:250px;
+}
+#next{
+    background: url("../image/forward.png") no-repeat;
+    margin-left:250px;
+}
+#checked{
+    background: url("../image/checked.png") no-repeat;
+}
+.edit{
+    background:white;
+    opacity: 0.5;
+}
